--- a/src/components/Error/styles.scss
+++ b/src/components/Error/styles.scss
@@ -1,9 +1,8 @@
-.error
-{
-    font-size: 12px;
+.error {
+  font-size: 12px;
 
-    margin-top: 0;
-    margin-bottom: 10px;
+  margin-top: 0;
+  margin-bottom: 10px;
 
-    color: rgb(179, 179, 179);
+  color: rgb(179, 179, 179);
 }
