--- a/src/components/Label/style.scss
+++ b/src/components/Label/style.scss
@@ -1,12 +1,11 @@
-.label
-{
-    font-size: 11px;
-    font-weight: 600;
+.label {
+  font-size: 11px;
+  font-weight: 600;
 
-    display: block;
+  display: block;
 
-    width: 100%;
-    margin-bottom: 10px;
+  width: 100%;
+  margin-bottom: 10px;
 
-    color: rgb(51, 51, 51);
+  color: rgb(51, 51, 51);
 }
