--- a/src/ui/icons_view/icons_view.styles.scss
+++ b/src/ui/icons_view/icons_view.styles.scss
@@ -1,5 +1,7 @@
 .root {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column nowrap;
   flex: 1;
+  overflow: auto;
+  height: 100%;
 }
