--- a/src/ui/icon/icon.styles.scss
+++ b/src/ui/icon/icon.styles.scss
@@ -74,4 +74,5 @@
   font-size: 12px;
   border-left: 1px solid var(--icon-name-border);
   border-right: 1px solid var(--icon-name-border);
+  user-select: none;
 }
