--- a/src/ui/icon_list/icon_list.styles.scss
+++ b/src/ui/icon_list/icon_list.styles.scss
@@ -1,21 +1,17 @@
 .root {
   display: block;
   width: 100%;
-  box-sizing: border-box;
 }
 
 .list {
-  box-sizing: border-box;
-
   display: grid;
   grid-gap: 12px;
   grid-template-columns: repeat(5, minmax(0, 1fr));
   background-color: #fff;
   color: #444;
+  margin: 0 12px 0 0;
 
   list-style: none;
-
-  margin: 0;
   padding: 0;
 }
 
